# GPUImageProcessing

./: LICENSE  README.md
include/: libdef.h
lib/RelWithDebInfo/: core.exp  core.lib
src/: CMakeLists.txt  CMakeSettings.json
src/app/: CMakeLists.txt  PNGViewer.cpp  PNGViewer.h  PerfUtility.cpp  PerfUtility.h  main.cpp
src/core/: CMakeLists.txt  hello.cpp  hello.h  lowPassAMP.cpp  lowPassAMP.h  lowPassCPU.cpp  lowPassCPU.h  lowPassGPU.cpp  lowPassGPU.h  lowPassKernel.cl  lowPassOpenCL.cpp  lowPassOpenCL.h  openCLPlayground.cpp  openCLPlayground.h  vectorAdd.cl
